@@ -6,11 +6,20 @@ import os
 import subprocess
 
 
+NEW_FILE_TEMPLATE = """\
+[batou]
+members =
+"""
+
+
 class EncryptedConfigFile(object):
     """Wrap encrypted config files."""
 
     lockfd = None
     _cleartext = None
+
+    # Additional GPG parameters. Used for testing.
+    gpg_opts = ''
 
     def __init__(self, encrypted_file, write_lock=False):
         """Context manager that opens an encrypted file.
@@ -35,7 +44,7 @@ class EncryptedConfigFile(object):
     @property
     def cleartext(self):
         if self._cleartext is None:
-            return '[batou]\nmembers = \n'
+            return NEW_FILE_TEMPLATE
         return self._cleartext
 
     @cleartext.setter
@@ -67,19 +76,29 @@ class EncryptedConfigFile(object):
 
     def _decrypt(self):
         self.cleartext = subprocess.check_output(
-            ['gpg --decrypt {}'.format(self.encrypted_file)], shell=True)
+            ['gpg {} --decrypt {}'.format
+                (self.gpg_opts, self.encrypted_file)],
+            shell=True)
 
     def _encrypt(self):
         recipients = self.config.get('batou', 'members').split(',')
+        recipients = [x.strip() for x in recipients]
+        recipients = filter(None, recipients)
+        if not recipients:
+            raise ValueError("Need at least one recipient.")
         recipients = ' '.join(['-r {}'.format(r.strip()) for r in recipients])
         os.rename(self.encrypted_file, self.encrypted_file+'.old')
         try:
-            pipe = subprocess.Popen(
-                ['gpg --batch --encrypt {} -o {}'.format(
-                    recipients, self.encrypted_file)],
-                stdin=subprocess.PIPE, shell=True)
-            pipe.communicate(self.cleartext)
+            gpg = subprocess.Popen(
+                ['gpg {} --batch --encrypt {} -o {}'.format(
+                    self.gpg_opts, recipients, self.encrypted_file)],
+                stdin=subprocess.PIPE,
+                shell=True)
+            gpg.communicate(self.cleartext)
+            if gpg.returncode != 0:
+                raise RuntimeError('GPG returned non-zero exit code.')
         except Exception:
             os.rename(self.encrypted_file+'.old', self.encrypted_file)
+            raise
         else:
             os.unlink(self.encrypted_file+'.old')
