@@ -1,3 +1,6 @@
 # Sample secrets file for testing.
+[batou]
+members = ct@gocept.com
+
 [foo]
 bar = baz
