@@ -1,4 +1,0 @@
-# Sample secrets file for testing.
-# To be encrypted with passphrase "SecretTestPassphrase"
-[foo]
-bar = baz
